# crypto-deltalake

./: .gitignore  CLAUDE.md  README.md  logger.py  main.py  pyproject.toml  read.py  ruff.toml
crypto_deltalake/: clean_table.py  config.py  connection.py  data.py  main.py  read.py
crypto_deltalake/config/: __init__.py  schemas.py  settings.py
crypto_deltalake/connections/: __init__.py  base.py  rest_api.py  websocket.py
crypto_deltalake/models/: __init__.py  base.py  liquidation.py  price.py
crypto_deltalake/processors/: __init__.py  base.py  liquidation.py  price.py
crypto_deltalake/services/: __init__.py  liquidation.py  price.py
crypto_deltalake/writers/: __init__.py  base.py  delta.py
notebooks/: explore_data.ipynb
